add notebook tutorials

--- a/notebooks/Reader_tutorial.ipynb
+++ b/notebooks/Reader_tutorial.ipynb
@@ -28,7 +28,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from km3io import AanetReader"
+    "from km3io.aanet import Reader"
    ]
   },
   {
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -52,130 +52,16 @@
     {
      "data": {
       "text/plain": [
-       "Events keys are:\n",
-       "\tid\n",
-       "\tdet_id\n",
-       "\tmc_id\n",
-       "\trun_id\n",
-       "\tmc_run_id\n",
-       "\tframe_index\n",
-       "\ttrigger_mask\n",
-       "\ttrigger_counter\n",
-       "\toverlays\n",
-       "\thits\n",
-       "\ttrks\n",
-       "\tw\n",
-       "\tw2list\n",
-       "\tw3list\n",
-       "\tmc_t\n",
-       "\tmc_hits\n",
-       "\tmc_trks\n",
-       "\tcomment\n",
-       "\tindex\n",
-       "\tflags\n",
-       "\tt.fSec\n",
-       "\tt.fNanoSec\n",
-       "Hits keys are:\n",
-       "\thits.id\n",
-       "\thits.dom_id\n",
-       "\thits.channel_id\n",
-       "\thits.tdc\n",
-       "\thits.tot\n",
-       "\thits.trig\n",
-       "\thits.pmt_id\n",
-       "\thits.t\n",
-       "\thits.a\n",
-       "\thits.pos.x\n",
-       "\thits.pos.y\n",
-       "\thits.pos.z\n",
-       "\thits.dir.x\n",
-       "\thits.dir.y\n",
-       "\thits.dir.z\n",
-       "\thits.pure_t\n",
-       "\thits.pure_a\n",
-       "\thits.type\n",
-       "\thits.origin\n",
-       "\thits.pattern_flags\n",
-       "Tracks keys are:\n",
-       "\ttrks.fUniqueID\n",
-       "\ttrks.fBits\n",
-       "\ttrks.usr_data\n",
-       "\ttrks.usr_names\n",
-       "\ttrks.id\n",
-       "\ttrks.pos.x\n",
-       "\ttrks.pos.y\n",
-       "\ttrks.pos.z\n",
-       "\ttrks.dir.x\n",
-       "\ttrks.dir.y\n",
-       "\ttrks.dir.z\n",
-       "\ttrks.t\n",
-       "\ttrks.E\n",
-       "\ttrks.len\n",
-       "\ttrks.lik\n",
-       "\ttrks.type\n",
-       "\ttrks.rec_type\n",
-       "\ttrks.rec_stages\n",
-       "\ttrks.status\n",
-       "\ttrks.mother_id\n",
-       "\ttrks.fitinf\n",
-       "\ttrks.hit_ids\n",
-       "\ttrks.error_matrix\n",
-       "\ttrks.comment\n",
-       "Mc hits keys are:\n",
-       "\tmc_hits.id\n",
-       "\tmc_hits.dom_id\n",
-       "\tmc_hits.channel_id\n",
-       "\tmc_hits.tdc\n",
-       "\tmc_hits.tot\n",
-       "\tmc_hits.trig\n",
-       "\tmc_hits.pmt_id\n",
-       "\tmc_hits.t\n",
-       "\tmc_hits.a\n",
-       "\tmc_hits.pos.x\n",
-       "\tmc_hits.pos.y\n",
-       "\tmc_hits.pos.z\n",
-       "\tmc_hits.dir.x\n",
-       "\tmc_hits.dir.y\n",
-       "\tmc_hits.dir.z\n",
-       "\tmc_hits.pure_t\n",
-       "\tmc_hits.pure_a\n",
-       "\tmc_hits.type\n",
-       "\tmc_hits.origin\n",
-       "\tmc_hits.pattern_flags\n",
-       "Mc tracks keys are:\n",
-       "\tmc_trks.fUniqueID\n",
-       "\tmc_trks.fBits\n",
-       "\tmc_trks.usr_data\n",
-       "\tmc_trks.usr_names\n",
-       "\tmc_trks.id\n",
-       "\tmc_trks.pos.x\n",
-       "\tmc_trks.pos.y\n",
-       "\tmc_trks.pos.z\n",
-       "\tmc_trks.dir.x\n",
-       "\tmc_trks.dir.y\n",
-       "\tmc_trks.dir.z\n",
-       "\tmc_trks.t\n",
-       "\tmc_trks.E\n",
-       "\tmc_trks.len\n",
-       "\tmc_trks.lik\n",
-       "\tmc_trks.type\n",
-       "\tmc_trks.rec_type\n",
-       "\tmc_trks.rec_stages\n",
-       "\tmc_trks.status\n",
-       "\tmc_trks.mother_id\n",
-       "\tmc_trks.fitinf\n",
-       "\tmc_trks.hit_ids\n",
-       "\tmc_trks.error_matrix\n",
-       "\tmc_trks.comment"
+       "<Reader: 10 entries>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "reader = AanetReader(aanet_file)\n",
+    "reader = Reader(aanet_file)\n",
     "reader"
    ]
   },
@@ -189,8 +75,6 @@
       "text/plain": [
        "['trks.fUniqueID',\n",
        " 'trks.fBits',\n",
-       " 'trks.usr_data',\n",
-       " 'trks.usr_names',\n",
        " 'trks.id',\n",
        " 'trks.pos.x',\n",
        " 'trks.pos.y',\n",
@@ -219,7 +103,7 @@
     }
    ],
    "source": [
-    "reader.tracks_keys"
+    "reader.keys.tracks_keys"
    ]
   },
   {
@@ -230,7 +114,7 @@
     {
      "data": {
       "text/plain": [
-       "<Table [<Row 0> <Row 1> <Row 2> ... <Row 7> <Row 8> <Row 9>] at 0x7f83f9d62c10>"
+       "<Table [<Row 0> <Row 1> <Row 2> ... <Row 7> <Row 8> <Row 9>] at 0x7fed2d98a750>"
       ]
      },
      "execution_count": 6,
@@ -240,7 +124,7 @@
    ],
    "source": [
     "# big lazyarray with ALL file data!\n",
-    "lazy_data = reader._lazy_data\n",
+    "lazy_data = reader._data\n",
     "lazy_data"
    ]
   },
@@ -252,7 +136,7 @@
     {
      "data": {
       "text/plain": [
-       "<ChunkedArray [5971 5971 5971 ... 5971 5971 5971] at 0x7f83f9d2cdd0>"
+       "<ChunkedArray [5971 5971 5971 ... 5971 5971 5971] at 0x7fed2d91f9d0>"
       ]
      },
      "execution_count": 7,
@@ -309,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,16 +214,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<ChunkedArray [[806451572 806451572 806451572 ... 809544061 809544061 809544061] [806451572 806451572 806451572 ... 809524432 809526097 809544061] [806451572 806451572 806451572 ... 809544061 809544061 809544061] ... [806451572 806455814 806465101 ... 809526097 809544058 809544061] [806455814 806455814 806455814 ... 809544061 809544061 809544061] [806455814 806455814 806455814 ... 809544058 809544058 809544061]] at 0x7f83f9a13890>"
+       "<ChunkedArray [[806451572 806451572 806451572 ... 809544061 809544061 809544061] [806451572 806451572 806451572 ... 809524432 809526097 809544061] [806451572 806451572 806451572 ... 809544061 809544061 809544061] ... [806451572 806455814 806465101 ... 809526097 809544058 809544061] [806455814 806455814 806455814 ... 809544061 809544061 809544061] [806455814 806455814 806455814 ... 809544058 809544058 809544061]] at 0x7fed2d8af450>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -352,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +255,7 @@
        "      dtype=int32)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -393,7 +277,7 @@
        "60"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -407,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +300,7 @@
        "806455814"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -435,16 +319,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<ChunkedArray [[-0.872885221293917 -0.872885221293917 -0.872885221293917 ... -0.6631226836266504 -0.5680647731737454 -0.5680647731737454] [-0.8351996698137462 -0.8351996698137462 -0.8351996698137462 ... -0.7485107718446855 -0.8229838871876581 -0.239315690284641] [-0.989148723802379 -0.989148723802379 -0.989148723802379 ... -0.9350162572437829 -0.88545604390297 -0.88545604390297] ... [-0.5704611045902105 -0.5704611045902105 -0.5704611045902105 ... -0.9350162572437829 -0.4647231989130516 -0.4647231989130516] [-0.9779941383490359 -0.9779941383490359 -0.9779941383490359 ... -0.88545604390297 -0.88545604390297 -0.8229838871876581] [-0.7396916780974963 -0.7396916780974963 -0.7396916780974963 ... -0.6631226836266504 -0.7485107718446855 -0.7485107718446855]] at 0x7f83f9b65f90>"
+       "<ChunkedArray [[-0.872885221293917 -0.872885221293917 -0.872885221293917 ... -0.6631226836266504 -0.5680647731737454 -0.5680647731737454] [-0.8351996698137462 -0.8351996698137462 -0.8351996698137462 ... -0.7485107718446855 -0.8229838871876581 -0.239315690284641] [-0.989148723802379 -0.989148723802379 -0.989148723802379 ... -0.9350162572437829 -0.88545604390297 -0.88545604390297] ... [-0.5704611045902105 -0.5704611045902105 -0.5704611045902105 ... -0.9350162572437829 -0.4647231989130516 -0.4647231989130516] [-0.9779941383490359 -0.9779941383490359 -0.9779941383490359 ... -0.88545604390297 -0.88545604390297 -0.8229838871876581] [-0.7396916780974963 -0.7396916780974963 -0.7396916780974963 ... -0.6631226836266504 -0.7485107718446855 -0.7485107718446855]] at 0x7fed2d8b8850>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -456,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -476,7 +360,7 @@
        "       -0.97094183])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -489,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +382,7 @@
        "56"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -512,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -521,7 +405,7 @@
        "-0.6024604933159441"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -552,5 +436,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
