--- a/notebooks/OfflineReader_tutorial.ipynb
+++ b/notebooks/OfflineReader_tutorial.ipynb
@@ -4,22 +4,13 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['/home/zineb/km3net/km3net/km3io/notebooks', '/home/zineb/miniconda3/envs/km3pipe/lib/python37.zip', '/home/zineb/miniconda3/envs/km3pipe/lib/python3.7', '/home/zineb/miniconda3/envs/km3pipe/lib/python3.7/lib-dynload', '', '/home/zineb/miniconda3/envs/km3pipe/lib/python3.7/site-packages', '/home/zineb/km3net/km3net/km3io', '/home/zineb/miniconda3/envs/km3pipe/lib/python3.7/site-packages/IPython/extensions', '/home/zineb/.ipython', '/home/zineb/km3net/km3net/km3io', '/home/zineb/km3net/km3net/km3io', '/home/zineb/km3net/km3net/km3io']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Add file to current python path\n",
     "from pathlib import Path\n",
     "import sys\n",
     "sys.path.append(str(Path.cwd().parent))\n",
     "Path.cwd()\n",
-    "print(sys.path)\n",
     "\n",
     "# test samples directory - aanet test file\n",
     "files_path = Path.cwd().parent / 'tests/samples' \n",
@@ -27,33 +18,39 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import km3io as ki"
+    "# Read offline files (aanet)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<km3io.aanet.OfflineReader at 0x7f249af32750>"
+       "<km3io.aanet.OfflineReader at 0x7f756b8edd90>"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "import km3io as ki\n",
     "r = ki.OfflineReader(aanet_file)\n",
     "r"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To explore all the available branches in our offline file:"
    ]
   },
   {
@@ -187,8 +184,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# read events data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -197,13 +201,20 @@
        "<OfflineEvents: 10 parsed events>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "r.events"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "number of events:"
    ]
   },
   {
@@ -288,22 +299,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<ChunkedArray [176 125 318 ... 84 255 105] at 0x7f249eebaa10>"
+       "<ChunkedArray [176 125 318 ... 84 255 105] at 0x7f756b805ad0>"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "r.events.hits"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "lazyarrays can be used with any Numpy universal function. For example:"
    ]
   },
   {
@@ -328,8 +346,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "let's look at event 0:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +385,7 @@
        "\tt_fNanoSec          :       200000000"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -391,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -400,13 +425,20 @@
        "176"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "r.events[0].hits"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# read hits data:"
    ]
   },
   {
@@ -560,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -569,13 +601,20 @@
        "806451572"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "r[0].hits[0].dom_id"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# read tracks data:"
    ]
   },
   {
@@ -731,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -740,13 +779,22 @@
        "294.6407542676734"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "r[0].tracks[0].lik"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# read mc hits:"
    ]
   },
   {
@@ -786,7 +834,7 @@
     }
    ],
    "source": [
-    "r.mc_tracks."
+    "r.mc_tracks"
    ]
   },
   {
@@ -794,9 +842,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "r.mc_hits."
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
